--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amigo de Pata - Adoção Responsável de Cães</title>
+    <title>Lar dos caramellos - Adoção Responsável de Cães</title>
     <meta name="description" content="Adote amor e ganhe um amigo para a vida. Encontre seu companheiro ideal no Amigo de Pata, plataforma de adoção responsável de cães." />
     <meta name="author" content="Amigo de Pata" />
 
